# RELLIS-3D

./: .gitignore  README.md
benchmarks/: README.md  gscnn_requirement.txt  requirement.txt
catkin_ws/: .gitignore
catkin_ws/src/platform_description/: CMakeLists.txt  package.xml
catkin_ws/src/platform_description/launch/: description.launch
catkin_ws/src/platform_description/meshes/: arm-mount-plate.stl  bulkhead-collision.stl  bulkhead.stl  chassis-collision.stl  chassis.stl  diff-link.stl  e-stop.stl  fenders.stl  light.stl  rocker.stl  susp-link.stl  tracks.dae  tracks_collision.stl  wheel.stl
catkin_ws/src/platform_description/scripts/: env_run
catkin_ws/src/platform_description/urdf/: accessories.urdf.xacro  empty.urdf  warthog.gazebo  warthog.urdf  warthog.urdf.xacro
catkin_ws/src/platform_description/urdf/accessories/: novatel_smart6.urdf.xacro  warthog_arm_mount.urdf.xacro  warthog_bulkhead.urdf.xacro
catkin_ws/src/platform_description/urdf/configs/: arm_mount  base  bulkhead
dataset_generation/: add_camera_info.py  apply_cal.py  bag_extract.sh  construct_dataset.py  deconflict_tf.py  extract_images.py  extract_ply.py  label_override.yaml  merge_bags.py  merge_jsons.py  merge_tf_static.py  patch_appen.py  patch_bag_caminfo.py  patch_bag_tf.py  ply_utils.py  sort_sequences.py  synchronize_frames.py  write_tfs.py
images/: data_example.eps  sensor_setup.eps
utils/: Evaluate_img.ipynb  Evaluate_pt.ipynb  convert_ply2bin.py  label2color.ipynb  label_convert.py  lidar2img.ipynb  nerian_camera_info.yaml  plyreader.py  stereo_camerainfo_pub.py
(+53 files in other folders)
